# CodeTemplate

./: Makefile  README.md
bash/: install_service.sh  package.sh  startpyfile.sh  uninstall_service.sh
c/: CMakeLists.txt
